# llmclozestat

./: .env.example  .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  README.md  model.toml.example  pyproject.toml  run.toml.example
.github/workflows/: ci.yml
datasets/seed_probes_v0/: README.md  items.jsonl
datasets/smoke_v0/: README.md  (+1 more)
docs/: ci_policy.md  cli_usage.md  conceptual_model.md  current_status_notes.md  dataset_governance.md  design.md  error_codes.md  fill_class_policy.md  fixtures.md  implementation_plan.md  integrity.md  model_repository.md  model_repository_usage.md  operating_model.md  parser_fixture_policy.md  parser_scoring.md  prepare_submission.md  probe_design.md  problem_data_policy.md  prompting.md  research_plan.md  research_rationale.md  result_format.md  scientific_probe_methodology.md  status_matrix.md  submitter_identity.md  summary_scope.md  template_quickstart.md  validation.md
schemas/: README.md  environment.schema.json  item.schema.json  manifest.schema.json  model.schema.json  result.schema.json  summary.schema.json  validation_output.schema.json
submissions/: README.md
tests/: test_aggregation.py  test_dataset_item_consistency.py  test_environment_validation.py  test_item_validation.py  test_manifest_validation.py  test_model_repository_validation.py  test_model_validation.py  test_parser_fixtures.py  test_reporting.py  test_result_record.py  test_result_validation.py  test_runner.py  test_runner_progress_retry.py  test_seed_probes_dataset.py  test_submission.py  test_summary_validation.py  test_template_probes_dataset.py
(+72 files in other folders)
