[project]
name = "llmclozestat"
version = "0.0.1"
description = "A CLI for cloze-based statistical profiling of LLM outputs."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "tomli>=2.0.0; python_version < '3.11'"
]

[project.scripts]
llmclozestat = "llmclozestat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
